adding project section

--- a/public/index.html
+++ b/public/index.html
@@ -63,11 +63,11 @@
                     <div class="project-icon">
                         <i class="fas fa-brain"></i>
                     </div>
-                    <h3>Neural Network Framework</h3>
-                    <p>Custom deep learning framework built from scratch with GPU acceleration support.</p>
+                    <h3>Agent Based Email Framework</h3>
+                    <p>Custom email handling agent to automate email workflows and make daily life fully hands-free.</p>
                     <div class="project-tags">
+                        <span class="tag">Agentic AI</span>
                         <span class="tag">Python</span>
-                        <span class="tag">CUDA</span>
                         <span class="tag">ML</span>
                     </div>
                 </div>
@@ -76,12 +76,13 @@
                     <div class="project-icon">
                         <i class="fas fa-robot"></i>
                     </div>
-                    <h3>AI Research Assistant</h3>
-                    <p>Intelligent agent that helps researchers analyze and summarize academic papers.</p>
+                    <h3>AI Claim Validator</h3>
+                    <p>LLM based claim validator to aid report generation for insurance claims following the Altadena wildfires. </p>
                     <div class="project-tags">
-                        <span class="tag">NLP</span>
-                        <span class="tag">Transformers</span>
-                        <span class="tag">React</span>
+                        <span class="tag">LLM</span>
+                        <span class="tag">OpenAI</span>
+                        <span class="tag">Python</span>
+                        <span class="tag">ML</span>
                     </div>
                 </div>
 
@@ -89,27 +90,14 @@
                     <div class="project-icon">
                         <i class="fas fa-chart-line"></i>
                     </div>
-                    <h3>Predictive Analytics Platform</h3>
-                    <p>Real-time data analysis platform using ensemble learning methods.</p>
+                    <h3>MarketFit/h3>
+                    <p>Real time adverising app to build ads in seconds to be able to test their products in a simulated market.</p>
                     <div class="project-tags">
-                        <span class="tag">TensorFlow</span>
+                        <span class="tag">React</span>
                         <span class="tag">FastAPI</span>
-                        <span class="tag">Docker</span>
+                        <span class="tag">LLM</span>
                     </div>
-                </div>
-
-                <div class="project-card">
-                    <div class="project-icon">
-                        <i class="fas fa-image"></i>
-                    </div>
-                    <h3>Computer Vision Toolkit</h3>
-                    <p>Collection of state-of-the-art computer vision models for image processing.</p>
-                    <div class="project-tags">
-                        <span class="tag">PyTorch</span>
-                        <span class="tag">OpenCV</span>
-                        <span class="tag">CNN</span>
-                    </div>
-                </div>
+                </div> 
             </div>
         </div>
     </div>
