--- a/public/index.html
+++ b/public/index.html
@@ -85,12 +85,23 @@
                         <span class="tag">ML</span>
                     </div>
                 </div>
-
                 <div class="project-card">
                     <div class="project-icon">
                         <i class="fas fa-chart-line"></i>
                     </div>
-                    <h3>MarketFit/h3>
+                    <h3>AI Advertising Reels Generator</h3>
+                    <p>LLM based reels that turns texts into engaging ads and automatically posts on Instagram Reels.</p>
+                    <div class="project-tags">
+                        <span class="tag">Multi-Modal AI</span>
+                        <span class="tag">Instagram</span>
+                        <span class="tag">Runway AI</span>
+                    </div>
+                </div> 
+                <div class="project-card">
+                    <div class="project-icon">
+                        <i class="fas fa-chart-line"></i>
+                    </div>
+                    <h3>MarketFit</h3>
                     <p>Real time adverising app to build ads in seconds to be able to test their products in a simulated market.</p>
                     <div class="project-tags">
                         <span class="tag">React</span>
