--- a/public/index.html
+++ b/public/index.html
@@ -87,7 +87,7 @@
                 </div>
                 <div class="project-card">
                     <div class="project-icon">
-                        <i class="fas fa-chart-line"></i>
+                        <i class="fas fa-video"></i>
                     </div>
                     <h3>AI Advertising Reels Generator</h3>
                     <p>LLM based reels that turns texts into engaging ads and automatically posts on Instagram Reels.</p>
